--- a/auto-approve-pro/config.json
+++ b/auto-approve-pro/config.json
@@ -1,21 +1,9 @@
 {
   "API_ID": 123456,
-  "API_HASH": "YOUR_API_HASH_HERE",
-  "SESSION_STRING": "PASTE_SESSION_STRING_HERE",
-
-  "TARGET_CHAT_IDS": [
-    -1001234567890
-  ],
-
-  "APPROVE": {
-    "DRY_RUN": false,
-    "PER_APPROVE_DELAY_SEC": 0.7,
-    "MAX_APPROVALS_PER_MINUTE": 50,
-    "RESCAN_EVERY_MINUTES": 10,
-    "RESCAN_LIMIT_PER_CHAT": 1000
-  },
-
-  "LOGGING": {
-    "LEVEL": "INFO"
-  }
+  "API_HASH": "API_HASH",
+  "SESSION_STRING": "SESSION",
+  "TARGET_CHAT_IDS": [-1001234567890],
+  "PER_APPROVE_DELAY_SEC": 0.7,
+  "MAX_APPROVALS_PER_MINUTE": 50,
+  "RESCAN_EVERY_MINUTES": 10
 }
