--- a/auto-approve-pro/config.json
+++ b/auto-approve-pro/config.json
@@ -1,6 +1,6 @@
 {
-  "API_ID": 123456,
-  "API_HASH": "API_HASH",
+  "API_ID": 27989579,
+  "API_HASH": "64742ebe270a7d202150134d66397839",
   "SESSION_STRING": "SESSION",
   "TARGET_CHAT_IDS": [-1001234567890],
   "PER_APPROVE_DELAY_SEC": 0.7,
