--- a/config.json
+++ b/config.json
@@ -1,9 +1,13 @@
 {
   "API_ID": 123456,
-  "API_HASH": "API_HASH",
-  "SESSION_STRING": "SESSION",
-  "TARGET_CHAT_IDS": [-1001234567890],
-  "PER_APPROVE_DELAY_SEC": 0.7,
-  "MAX_APPROVALS_PER_MINUTE": 50,
-  "RESCAN_EVERY_MINUTES": 10
+  "API_HASH": "YOUR_API_HASH",
+  "SESSION_STRING": "YOUR_SESSION_STRING",
+
+  "INVITE_LINK": "https://t.me/+e8h5_XQmY5szYjUx",
+
+  "MAX_APPROVALS_PER_MINUTE": 80,
+  "CONCURRENCY": 4,
+  "RESCAN_EVERY_MINUTES": 1,
+
+  "BASE_BACKOFF_SEC": 0.0
 }
